--- a/python3-windows.qmd
+++ b/python3-windows.qmd
@@ -17,6 +17,14 @@ format:
 </head>
 <body>
 
+## Prerequisites
+
+Before you begin, ensure you have the following:
+
+1. A Windows computer.
+2. An internet connection.
+3. Adequate disk space for the installation.
+
 # Installing Python and Jupyter on Windows
 
 In this guide, we will walk you through the process of installing Python on Windows, configuring the user-specific Python bin path, and exporting it in your system environment variables. Additionally, we will install and launch Jupyter Notebook, a popular tool for interactive Python development.
