--- a/thonny-windows.qmd
+++ b/thonny-windows.qmd
@@ -115,9 +115,9 @@ Begin your coding journey with Thonny, and for additional guidance, consult the 
 If you encounter any issues or have questions, feel free to seek assistance from the Thonny community or refer to the documentation for troubleshooting tips.
 
 
-<footer>
+<!-- <footer>
   <p>This is a Quarto website. To learn more about Quarto websites visit <https://quarto.org/docs/websites>.<br>
   Author: Kartik Bulusu<br>
   Contact: <a href="mailto:bulusu@gwu.edu">bulusu</a><br>
   &copy; 2024 All rights reserved</p>
-</footer>
+</footer> -->
