--- a/policies.qmd
+++ b/policies.qmd
@@ -40,61 +40,72 @@ Bulusu, Kartik V. (2025, January). MAE 6291: Internet-of-Things for Engineers. [
 ## Assignments and Grades
 
 ### Grading - List of what will be counted and percentages (as used in Spring 2024 and can be changed in Spring 2025).
-<br><br><br>
-**For example:**
+<br>
 
-<style>
-* {
-  box-sizing: border-box;
-}
-/* Create two equal columns that floats next to each other */
-.column {
-  float: left;
-  width: 50%;
-  padding: 10px;
-  height: 300px; /* Should be removed. Only for demonstration */
-}
+<table class="table table-hover w-auto">
+  <colgroup>
+    <col style="width:20%">
+    <col style="width:40%">
+    <col style="width:40%">
+    <!-- <col style="width:32%"> -->
+  </colgroup>
+  <thead>
+    <tr>
+      <th scope="col"> </th>
+      <th scope="col">Example of grade breakdown for undergraduate students</th>
+      <th scope="col">Example of grade breakdown for graduate students</th>
+      <!--- <th scope="col">Column heading</th> -->
+    </tr>
+  </thead>
 
-/* Clear floats after the columns */
-.row:after {
-  content: "";
-  display: table;
-  clear: both;
-}
-</style>
+  <tr class="table-secondary">
+    <th scope="row">
+      <img src="/images/noun-exam-3617082_copy.png" alt="exam icon" style="object-fit:contain width:200px;height:200px; margin-right: 5px;" /><br>
+      <p><font size="1">exam by pongsakorn from <a href="https://thenounproject.com/browse/icons/term/exam/" target="_blank" title="exam Icons">Noun Project</a></font></p>
+    </th>
+      <td>
+        <ul>
+          <!-- <li>Attendance and/or peer-to-peer and instructor interactions 10% </li> -->
+          <li>In-class lab work and/or Weekly Quizzes 10% </li> 
+          <li>Python programming and other Homework 10% </li>
+          <li>Guest lecture reports 20% </li> 
+          <li>Projects (including code, demo, written report and presentation) 50% </li> 
+          <ul>
+            <li>20% Midterm project (Groups of two undergrads at most) </li>
+            <li>30% Final project (Individial) </li> 
+          </ul> 
+        </ul>  
+      </td>
+      <td>
+        <ul>
+         <!-- <li>Attendance and/or peer-to-peer and instructor interactions 10% </li>  -->
+         <li>In-class lab work and/or Weekly Quizzes 10% </li>  
+         <li>Python programming and other Homework 10% </li>
+         <li>In-class or offline presentations 10% </li>           
+         <li>Guest lecture reports 10% </li> 
+         <li>Paper reviews of seleted archival journals will be required in formats provided 10% </li> 
+         <li>Projects (including code, demo, written report and presentation) 50% </li>  
+         <ul>
+            <li>20% Midterm project (Individial)</li>
+            <li>30% Final project (Individial)</li>
+         </ul>   
+        </ul>
+      </td>
+      <!-- <td>
+      </td> -->
+      <!--- <td>Column content</td> -->
+  </tr>
+</table>
 
-<div class="row">
- <div class="column">
-- Attendance and/or peer-to-peer and instructor interactions 10%
-- In-class work and/or Weekly Quizzes 10% 
-- Project reports, paper reviews and in-class presentations 10% 
-- Python programming and other Homework 20%
-- Projects (including code, demo, written report and presentation) 50% 
-  - 20% Individual midterm project
-  - 30% Group final project 
- </div>
+<br><br>
 
+## Grading Scale (subject to change during Spring 2025)
 
+The following grading scale will be applied at the end of the semester to calculate letter grades: 90-100: A, 84-89: A-, 78-83: B+, 72-77: B, 66-71: B-, 60-65: C+, 56-59: C, 52-55: C-, 46-51: D, 0-45: F.
 
+Grades are "rounded up" to the nearest integer.
 
-
- <div class="column">
- <!-- "float: left;  -->
- <img src="/images/noun-exam-3617082_copy.png" alt="exam icon" style="object-fit:contain width:200px;height:200px; margin-right: 5px;" /><br>
- <p><font size="1">exam by pongsakorn from <a href="https://thenounproject.com/browse/icons/term/exam/" target="_blank" title="exam Icons">Noun Project</a></font></p>
- </div>
-</div>
-
-
-<br><br><br>
-
-## Grading Scale
-TBA
-<!-- The following grading scale will be applied at the end of the semester to calculate letter grades: 90-100: A, 84-89: A-, 78-83: B+, 72-77: B, 66-71: B-, 60-65: C+, 56-59: C, 52-55: C-, 46-51: D, 0-45: F.
-
-Grades are "rounded up" to the nearest integer. -->
-
-<br><br><br>
+<br><br>
 
 ## Additional important information about grading policy:
 
@@ -103,25 +114,23 @@ Grades are "rounded up" to the nearest integer. -->
 - There may be instances in the presentations where peer-evaluations may be introduced at the discretion of the instructor.
 - The instructor will seeks inputs from the class and decide if course projects will be done individfually, in groups or in a combination. 
 
-<br><br><br>
+<br><br>
 
 ## Classroom Policies and Student responsibilities
+<table>
+  <tr>
+    <td width="60%">
+      <p> **The course is designed with experiential learning modules provided in each session.** </p>
+      <p> This course requires a combination of individual and group work entailing hands-on activities and frequent interactions with the instructional team. </p>
+      <p> The lectures, labs and office hours are available for interacting with your group and the instructor. We ask that all students adhere to the course policies throughout the duration of the semester. </p>
+    </td>
 
-<div class="row">
-  <div class="column">
-<p> **The course is designed with experiential learning modules provided in each session.** </p>
-<p> This course requires a combination of individual and group work entailing hands-on activities and frequent interactions with the instructional team. </p>
-<p> The lectures, labs and office hours are available for interacting with your group and the instructor. We ask that all students adhere to the course policies throughout the duration of the semester. </p>
- </div>
-
- <div class="column">
- <!-- "float: left;  -->
- <img src="/images/noun-classroom-3973477_copy.png" alt="classroom icon" style="object-fit:contain width:200px;height:200px; margin-right: 5px;" /><br>
- <p><font size="1">classroom by Chattapat from <a href="https://thenounproject.com/browse/icons/term/classroom/" target="_blank" title="classroom Icons">Noun Project</a></font></p>
- </div>
-</div>
-
-<br><br><br>
+    <td width="40%">
+      <img src="/images/noun-classroom-3973477_copy.png" alt="classroom icon" style="object-fit:contain width:200px;height:200px; margin-right: 5px;" /><br>
+      <p><font size="1">classroom by Chattapat from <a href="https://thenounproject.com/browse/icons/term/classroom/" target="_blank" title="classroom Icons">Noun Project</a></font></p>
+    </td>
+  </tr>
+</table>
 
 - **Be respectful:** 
   - Listen to the instructor. Keep an open mind to the course material presented. 
@@ -158,28 +167,27 @@ Late work is not accepted, with the following exceptions:
 - To ensure fairness toward all students, the instructor will request documentation of such circumstances.
 
 ## Justice, Equity, Diversity, Inclusion (JEDI) statement
+<table>
+  <tr>
+    <td width="60%">
+      <p> The instructor intends to support the course needs of all students with diverse backgrounds and perspectives in this course. </p>
+      <p> The instructor believes that the diversity that the students bring to this class is a resource, strength, and an asset. </p>
+      <p> The instructor will strive to present material that is respectful of the diverse backgrounds and characteristics of the student body and the instructional team. </p>
+      <p> The course materials and activities presented in this course are intended to be respectful of: age, race, ethnicity, country of origin, language, religion, spiritual practice, sexual orientation, gender identity or expression, introversion/extroversion personality dimensions, and socioeconomic and mental/physical status. </p>
+      <p> Each of us, whether student or instructional team member, is expected to treat all others with respect. </p>
+      <p> Disrespect in any form will not be tolerated. </p>
+    </td>
+    <td width="40%">
+      <img src="/images/noun-employee-diversity-3989902_copy.png" alt="classroom icon" style="object-fit:contain width:200px;height:200px; margin-right: 5px;" /><br>
+      <p><font size="1">employee diversity by Bold Yellow from <a href="https://thenounproject.com/browse/icons/term/employee-diversity/" target="_blank" title="employee diversity Icons">Noun Project</a></font></p>
+    </td>
+  </tr>
+</table>
 
-<div class="row">
-  <div class="column">
-  <li> The instructor intends to support the course needs of all students with diverse backgrounds and perspectives in this course. </li>
-  <li> The instructor believes that the diversity that the students bring to this class is a resource, strength, and an asset.</li>
-  <li> The instructor will strive to present material that is respectful of the diverse backgrounds and characteristics of the student body and the instructional team. </li>
-  <li> The course materials and activities presented in this course are intended to be respectful of: age, race, ethnicity, country of origin, language, religion, spiritual practice, sexual orientation, gender identity or expression, introversion/extroversion personality dimensions, and socioeconomic and mental/physical status.</li>
-  <li> Each of us, whether student or instructional team member, is expected to treat all others with respect. </li> 
-  <li> Disrespect in any form will not be tolerated. </li>
-
- </div>
-<br><br><br>
-
- <div class="column">
- <!-- "float: left;  -->
- <img src="/images/noun-employee-diversity-3989902_copy.png" alt="classroom icon" style="object-fit:contain width:200px;height:200px; margin-right: 5px;" /><br>
- <p><font size="1">employee diversity by Bold Yellow from <a href="https://thenounproject.com/browse/icons/term/employee-diversity/" target="_blank" title="employee diversity Icons">Noun Project</a></font></p>
- </div>
-</div>
-
-<br><br><br><br><br><br><br><br>
+<br>
  <p> Please let the [instructor](instructor.qmd) know ways to improve the effectiveness of the course. See [JEDI resources](https://www.cs.seas.gwu.edu/justice-equity-diversity-and-inclusion-resources) for student resources. </p>
+
+<br><br>
 
 ## Use of chatGPT or any other AI-based models for in-class work and deliverables
 **The use of chatGPT or any other generative AI-based models is not permitted by the instructor.**
@@ -200,11 +208,13 @@ Furthermore, the ethical issues regarding the use of chatGPT or any other AI-bas
 - <p><a href="https://openai.com/blog/chatgpt/" target="_blank" title="OpenAI portal">chatGPT chatbot</a></p>
 - <p><a href="https://www.socialsciencespace.com/2022/12/how-chatgpt-could-transform-higher-education/" title="chatGPT to transform higher ed">How ChatGPT Could Transform Higher Education</a></p>
 
+<br><br>
 
 # University Policies
-
 ## Use of Electronic Course Materials and Class Recordings
 Students are encouraged to use electronic course materials, including recorded class sessions (if any), for private personal use in connection with their academic program of study. Electronic course materials and recorded class sessions should not be shared or used for non-course related purposes unless express permission has been granted by the instructor. Students who impermissibly share any electronic course materials are subject to discipline under the Student Code of Conduct. Please contact the instructor if you have questions regarding what constitutes permissible or impermissible use of electronic course materials and/or recorded class sessions. Please contact [Disability Support Services](https://disabilitysupport.gwu.edu) if you have questions or need assistance in accessing electronic course materials.
+
+<br><br>
 
 ## University Policy on Religious Holidays 
 
@@ -213,8 +223,7 @@ Students are encouraged to use electronic course materials, including recorded c
 3.	Faculty who intend to observe a religious holiday should arrange at the beginning of the semester to reschedule missed classes or to make other provisions for their course‐related activities.
 For details and policy, see “Religious Holidays” at <https://provost.gwu.edu/policies-procedures-and-guidelines>
 
-
-
+<br><br>
 
 ## Support for Students Outside the Classroom 
 
@@ -227,6 +236,9 @@ The University's Mental Health Services offers 24/7 assistance and referral to a
 <!--- # Contents
  - [Specification](#specification) 
  - [Dependencies Title](#dependencies-title) --> 
+
+<br><br>
+
 ## Academic Integrity Code
 
 Academic dishonesty is defined as cheating of any kind, including misrepresenting one's own work, taking credit for the work of others without crediting them and without appropriate authorization, and the fabrication of information. You are not allowed to collaborate on the home works and lab assignments; for programming projects and hardware lab assignments, you can work in teams only if they are designated as team projects (labs). Unless otherwise specified, you cannot search for solutions or code on the web – but you can use any code that is included in the textbook or lecture notes (but please cite them). I will be using a SW tool that checks for program code similarities – any pair of programs or written reports with greater than 10% similarity will be closely examined.
